[FSAR-2] Fixing breadcrumb overflow calculation

--- a/src/components/general/Breadcrumb/breadcrumb.scss
+++ b/src/components/general/Breadcrumb/breadcrumb.scss
@@ -50,7 +50,7 @@
     & .breadcrumb__label {
       font-size: 0.9rem;
       white-space: nowrap;
-      padding: 0.5rem 0;
+      margin: 0.5rem 0;
       display:inline-block;
     }
     & .button {
@@ -64,7 +64,7 @@
     flex-direction: row;
     white-space: nowrap;
     overflow: hidden;
-    max-width: 96%;
+    max-width: 98%;
     .expanded & {
       flex-direction: column;
     }
@@ -92,7 +92,7 @@
     padding-right: 0.5rem;
     & > * {
       display: inline-block;
-      padding: 0.5rem 0;
+      margin: 0.5rem 0;
     }
     & + & {
       &::before {
@@ -119,7 +119,7 @@
   &__link {
     @include link;
     display: inline-block;
-    padding: 0.5rem 0;
+    margin: 0.5rem 0;
   }
   &__mobile-overlay {
     @include link;
